# ommr4all-server

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  manage.py  pyproject.toml  requirements.txt
database/: __init__.py  admin.py  apps.py  database_available_models.py  database_book.py  database_book_documents.py  database_book_meta.py  database_dictionary.py  database_file.py  database_internal.py  database_page.py  database_page_meta.py  database_permissions.py
database/file_formats/: __init__.py
database/lyric_database/: apps.py
database/migrations/: 0001_initial.py  0002_remove_words_and_neume_connector.py  (+7 more)
filemanager/: urls.py
gregorian_annotator_server/: settings.py  urls.py  wsgi.py
internal_storage/: .gitignore
main/: book.py  book_meta.py  urls.py  views.py
ommr4all/: routing.py  serializer.py  settings.py  urls.py  wsgi.py
omr/: apps.py  experimenter.py  image_util.py  util.py
restapi/: apps.py  urls.py
shared/: jsonparsing.py  pcgtscanvas.py
storage/: .gitignore
tests/: manage_gitlab-ci.py  test_book_operations.py  test_clef.py  test_clef_pis.py  test_mei_exporter.py  test_monodi_export.py  test_monodi_pattern_search.py  test_pcgts.py  test_restapi.py  test_skeduler.py
tools/: apply_algorithm_to_book.py  create_dictionary_for_s2s_symbol_detection.py  create_hyphenation_dictionary.py  dataset_statistics.py  datasetstatistics.py  doc_exp.py  evaluate_initium.py  evaluate_pcgts.py  evaluated_monodi_texts.py  evaluatetiming.py  evaluatetiming_zip.py  evaluaute_monodi.py  export_mdocs_specified_by_xlms.py  export_pages.py  extract_full_text.py  extracttextlines.py  filter_docs_in_excel.py  filter_unedited_documents.py  generate_abbreviations.py  generate_hyphen_dict.py  graduel_syn.py  lyrics_list_by_source.py  monodi_to_lyrics_format.py  prepare_for_gh.py  rotate_pcgts_content.py  s.py  simple_gregorianik_text_export.py  simulate_ocr.py  syllable_dictionary.py  symbolClassificationAdjustments.py  test.py  update_docs_metainfos.py  visualizer_pos.py  word_frequency_list.py
webapp/: tests.py  urls.py  views.py
(+517 files in other folders)
