[project]
name = "ommr4all-server"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "attrs>=26.1.0",
    "beautifulsoup4>=4.14.3",
    "channels>=4.3.2",
    "cryptography>=46.0.6",
    "ctc-decoder",
    "dataclasses-json>=0.6.7",
    "django==5.2.0",
    "djangorestframework==3.16",
    "djangorestframework-simplejwt>=5.5.1",
    "edit-distance>=1.0.7",
    "edlib>=1.3.9.post1",
    "ezodf>=0.3.2",
    "guppyocr",
    "h5py>=3.16.0",
    "locked-dict>=2023.10.22",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "mashumaro>=3.20",
    "matplotlib>=3.10.8",
    "midiutil>=1.2.1",
    "nautilus-ocr",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "peakutils>=1.3.5",
    "pillow>=12.1.1",
    "pixel-classifier-torch",
    "prettytable>=3.17.0",
    "protobuf>=7.34.1",
    "python-bidi>=0.6.7",
    "requests>=2.33.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "six>=1.17.0",
    "symspellpy>=6.9.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.31",
    "unidecode>=1.4.0",
    "word-beam-search",
    "xlsxwriter>=3.2.9",
]
[tool.uv.sources]
word-beam-search = { git = "https://github.com/githubharald/CTCWordBeamSearch.git", rev = "master" }
ctc-decoder = { git = "https://github.com/githubharald/CTCDecoder.git", rev = "master" }
nautilus-ocr = { git = "https://github.com/Gawajn/nautilus.git" }
pixel-classifier-torch = { git = "https://github.com/Gawajn/segmentation-pytorch.git" }
guppyocr = { git = "https://gitlab+deploy-token-113:pdXYgWy8yHMq5it7CxK6@gitlab2.informatik.uni-wuerzburg.de/nof36hn/guppyocr.git" }

[tool.setuptools]
packages = ["omr", "webapp", "shared", "restapi", "database", "ommr4all", "internal_storage", "tests", "webapp", "thirdparty"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"